UPDATE: forms is now in a top-level folder (@import FoundryCSS/forms/all). BUGFIX: Checkbox extend visibility--hidden is now optional. UPDATE: Added form-description class.

--- a/src/FoundryCSS/forms/inputs/Checkbox/_checkbox.scss
+++ b/src/FoundryCSS/forms/inputs/Checkbox/_checkbox.scss
@@ -14,7 +14,7 @@
 }
 
 .form-checkbox__input {
-    @extend %visibility--hidden;
+    @extend %visibility--hidden !optional;
 
     &:focus + .form-checkbox__pseudo {
         box-shadow: 0 0 12px 0 rgba(color('gamma'), 0.9);
